--- a/index.html
+++ b/index.html
@@ -7,15 +7,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estrelas do Amanhã</title>
-    <link rel="stylesheet" href="styles/index.
-    css">
+    <link rel="stylesheet" href="styles/index.css">
     <link
         href="https://fonts.googleapis.com/css2?family=Archivo:ital,wght@0,100..900;1,100..900&family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
         rel="stylesheet">
 </head>
 
 <body>
+    <div id="app">
+        <main>
+            <div class="main-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non repudiandae harum
+                voluptas natus distinctio. Voluptatibus error, exercitationem quae, eos corrupti illo distinctio
+                accusamus eligendi fuga velit modi autem unde rem?</div>
+        </main>
 
+        <aside>
+            <div class="aside-container">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod minima corrupti
+                fugiat eos adipisci similique, ratione esse neque pariatur vel alias iusto perspiciatis quasi modi non
+                quaerat minus velit sint.</div>
+        </aside>
+    </div>
 </body>
 
 </html>
