--- a/index.html
+++ b/index.html
@@ -16,15 +16,38 @@
 <body>
     <div id="app">
         <main>
-            <div class="main-container">Lorem ipsum dolor sit amet consectetur adipisicing elit. Non repudiandae harum
-                voluptas natus distinctio. Voluptatibus error, exercitationem quae, eos corrupti illo distinctio
-                accusamus eligendi fuga velit modi autem unde rem?</div>
+            <div class="main-container">
+                <div class="back">
+                    <img src="assets/icons/arrow-left-02.svg" alt="">
+                    <span>Voltar</span>
+                </div>
+
+                <h1>Formulário de matrícula</h1>
+                <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã
+                </p>
+
+            </div>
         </main>
 
         <aside>
-            <div class="aside-container">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod minima corrupti
-                fugiat eos adipisci similique, ratione esse neque pariatur vel alias iusto perspiciatis quasi modi non
-                quaerat minus velit sint.</div>
+            <div class="aside-container">
+                <header>
+                    <img src="assets/logo/Frame 48095956.svg" alt="">
+                    <h2>Porque cada momento de
+                        <span>
+                            aprendizado
+                        </span>
+                        conta
+                    </h2>
+                    <p>
+                        Inscreva seu filho em nossa escola e veja-o florescer em um ambiente acolhedor, seguro e
+                        estimulante.
+                    </p>
+                </header>
+
+                <img src="assets/Illustration.svg" alt="Ilustração de uma professora com crianças prestando atenção">
+                
+            </div>
         </aside>
     </div>
 </body>
