--- a/index.html
+++ b/index.html
@@ -26,6 +26,52 @@
                 <p>Preencha os dados abaixo para matricular seu filho na escola de educação infantil Estrelas do Amanhã
                 </p>
 
+                <form method="post" enctype="multipart/form-data">
+                    <!-- Esse enctype é porque tem no formulario um arquivo de file -->
+                    <fieldset class="child-info">
+                        <legend>Informações da criança</legend>
+
+                        <div class="input-wrapper">
+                            <label for="fullname">Nome completo</label>
+                            <input id="fullname" name="fullname" type="text" placeholder="Qual o nome da criança">
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="birth">Data de nascimento</label>
+                            <input id="birth" name="birth" type="date" lang="pt-BR">
+                        </div>
+
+                        <div class="select-wrapper">
+                            <label for="gender">Sexo</label>
+                            <select name="gender" id="gender">
+                                <option value="female">Feminino</option>
+                                <option value="male">Masculino</option>
+                                <option value="na">Prefiro não responder</option>
+                            </select>
+                        </div>
+
+                        <div class="textarea-wrapper">
+                            <!-- Wrapper = Embrulho -->
+                             <label for="medical-info">Informações médicas</label>
+                             <textarea name="medial-info" id="medial-info"
+                             cols="30" rows="10"
+                             placeholder="A criança possui alguma condição médica que a escola deve estar ciente? (Se sim, especifique)"
+
+                             ></textarea>
+                        </div>
+
+                        <div class="droparea-wrapper">
+                            <input type="file" name="birth-file" id="birth-file">
+                            <img src="assets/icons/cloud-upload.svg" alt="">
+                            <p>
+                                Clique aqui para <br> 
+                                selecionar os arquivos
+                            </p>
+                        </div>
+
+                    </fieldset>
+                </form>
+
             </div>
         </main>
 
@@ -46,7 +92,7 @@
                 </header>
 
                 <img src="assets/Illustration.svg" alt="Ilustração de uma professora com crianças prestando atenção">
-                
+
             </div>
         </aside>
     </div>
