--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 
                             <div class="dropzone">
                                 <input type="file" name="birth-file" id="birth-file">
-                                
+
                                 <svg width="48" height="48" viewBox="0 0 48 48" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
@@ -83,6 +83,45 @@
                             </div>
                         </div>
 
+                    </fieldset>
+
+                    <fieldset class="address">
+                        <legend>Endereço residencial</legend>
+
+                        <div class="input-wrapper">
+                            <label for="cep">CEP</label>
+                            <input type="text" id="cep" name="cep">
+                        </div>
+
+                        <div class="flex">
+                            <div class="input-wrapper flex-2">
+                                <label for="street">Rua</label>
+                                <input type="text" id="street" name="street"
+                                value="Rua das flores" disabled
+                                >
+                            </div>  
+
+                            <div class="input-wrapper flex-1">
+                                <label for="number">Número</label>
+                                <input type="number" id="number" name="number">
+                            </div>
+
+                        </div>
+
+                        <div class="flex">
+                            <div class="input-wrapper flex-2">
+                                <label for="city">Cidade</label>
+                                <input type="text" id="city" name="city"
+                                value="São Paulo" disabled
+                                >
+                            </div>  
+
+                            <div class="input-wrapper flex-1">
+                                <label for="state">Estado</label>
+                                <input value="SP" type="text" id="state" name="state" disabled>
+                            </div>
+
+                        </div>
                     </fieldset>
                 </form>
 
