--- a/index.html
+++ b/index.html
@@ -96,10 +96,8 @@
                         <div class="flex">
                             <div class="input-wrapper flex-2">
                                 <label for="street">Rua</label>
-                                <input type="text" id="street" name="street"
-                                value="Rua das flores" disabled
-                                >
-                            </div>  
+                                <input type="text" id="street" name="street" value="Rua das flores" disabled>
+                            </div>
 
                             <div class="input-wrapper flex-1">
                                 <label for="number">Número</label>
@@ -111,16 +109,38 @@
                         <div class="flex">
                             <div class="input-wrapper flex-2">
                                 <label for="city">Cidade</label>
-                                <input type="text" id="city" name="city"
-                                value="São Paulo" disabled
-                                >
-                            </div>  
+                                <input type="text" id="city" name="city" value="São Paulo" disabled>
+                            </div>
 
                             <div class="input-wrapper flex-1">
                                 <label for="state">Estado</label>
                                 <input value="SP" type="text" id="state" name="state" disabled>
                             </div>
 
+                        </div>
+                    </fieldset>
+
+                    <fieldset class="gardian">
+                        <legend>Informações do responsável</legend>
+
+                        <div class="input-wrapper">
+                            <label for="gardian">Nome do responsável</label>
+                            <input type="text" id="gardian" name="gardian">
+                            <small>Principal responsável legal e contato de emergência</small>
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="phone">Telefone</label>
+                            <input type="text" name="phone" id="phone" placeholder="(10) 98765-4321">
+                        </div>
+
+                        <div class="input-wrapper">
+                            <label for="mail">Email</label>
+                            <input type="email" id="mail" name="mail" required>
+                            <div class="error">
+                                <img src="assets/icons/alert-circle.svg" alt="Icone de alerta vermelho">
+                                <span>Insira um e-mail válido</span>
+                            </div>
                         </div>
                     </fieldset>
                 </form>
