--- a/index.html
+++ b/index.html
@@ -151,22 +151,66 @@
 
                             <div class="radio-wrapper">
                                 <div class="radio-inner">
-                                    <div class="radio-image"></div>
+                                    <div class="radio-img"></div>
                                     <input type="radio" name="study-shift" value="morning" id="morning">
                                     <img src="assets/icons/sun-cloud-02.svg" alt="Icone de sol com nuvem ">
                                     <label for="morning">Manhã</label>
                                 </div>
-                            </div>
 
-                            <div class="radio-wrapper">
                                 <div class="radio-inner">
-                                    <div class="radio-image"></div>
+                                    <div class="radio-img"></div>
                                     <input type="radio" name="study-shift" value="evening" id="evening">
                                     <img src="assets/icons/sun-02.svg" alt="Icone de sol">
                                     <label for="evening">Tarde</label>
                                 </div>
                             </div>
+                        </div>
 
+                        <div class="input-wrapper">
+                            <label>Em qual esporte você gostaria de inscrever seu filho?</label>
+                            <div class="radio-wrapper">
+                                <div class="radio-inner">
+                                    <div class="radio-img"></div>
+                                    <input type="radio" name="sport" id="football">
+                                    <img src="assets/icons/football.svg" alt="Icone de futebol">
+                                    <label for="football">Futebol</label>
+                                </div>
+                                
+                                <div class="radio-inner">
+                                    <div class="radio-img"></div>
+                                    <input type="radio" name="sport" id="basketball">
+                                    <img src="assets/icons/basketball-02.svg" alt="Icone de basquete">
+                                    <label for="basketball">Basquete</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-img"></div>
+                                    <input type="radio" name="sport" id="swimming">
+                                    <img src="assets/icons/swimming.svg" alt="Icone de natação">
+                                    <label for="swimming">Natação</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-img"></div>
+                                    <input type="radio" name="sport" id="yoga">
+                                    <img src="assets/icons/yoga-02.svg" alt="Icone de yoga">
+                                    <label for="yoga">Yoga</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-img"></div>
+                                    <input type="radio" name="sport" id="volleyball">
+                                    <img src="assets/icons/volleyball.svg" alt="Icone de volleyball">
+                                    <label for="volleyball">Volei</label>
+                                </div>
+
+                                <div class="radio-inner">
+                                    <div class="radio-img"></div>
+                                    <input type="radio" name="sport" id="boxing">
+                                    <img src="assets/icons/boxing-glove-01.svg" alt="Icone de boxing">
+                                    <label for="boxing">Boxe</label>
+                                </div>
+                            </div>
                         </div>
                     </fieldset>
 
