--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
                                     <img src="assets/icons/football.svg" alt="Icone de futebol">
                                     <label for="football">Futebol</label>
                                 </div>
-                                
+
                                 <div class="radio-inner">
                                     <div class="radio-img"></div>
                                     <input type="radio" name="sport" id="basketball">
@@ -214,6 +214,23 @@
                         </div>
                     </fieldset>
 
+                    <div class="terms-wrapper input-wrapper checkbox-wrapper">
+                        <div class="checkbox-image"></div>
+                        <input type="checkbox" name="terms" id="terms">
+                        <label for="terms">Declaro que li e concordo com os <strong>Termos e Condições</strong> e com a
+                            <strong>Política de
+                                Privacidade</strong> da escola Estrela do Amanhã</label>
+                    </div>
+
+                    <div class="actions-wrapper">
+                        <button class="btn-secondary" type="button">
+                            Salvar respostas
+                        </button>
+
+                        <button class="btn-primary" type="submit">
+                            Fazer matrícula
+                        </button>
+                    </div>
                 </form>
 
             </div>
